first touching of the main page and his style

--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>omer'swikimainpage</title>
 </head>
-<body>
-    
+<nav class="navbar">
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</nav>
+<body id="mainbody">
+    <section class="wellcomesec">
+        <div class="titlebox">
+            <h1>short summery about the subjact i have chose to shere with you...</h1>
+        </div>
+        <div class="summerybox">
+            in this website ill try to give you some advices for hiking in israel!<br>
+            ill try to conclude as many information that i can to give you the best experience
+            of israel calture and nature.<br>
+                <ul>
+                    <li>reccomended trails in each area</li>
+                    <li>reccomended atractions</li>
+                    <li>info about the different areas</li>
+                    <li>some tips of mine</li>
+                </ul>  
+        </div>
+    </section>
+    <div class="tablecontent">
+        <div class="page1">The Negev and the Southern District</div>
+        <div class="page2">The north - from the Golan Heights to the Western Galilee</div>
+        <div class="page3">Central israel</div>
+    </div>
+    <div class="contactbox">
+        <h1>here are some contact details of mine</h1>
+        <div class="contactlink">
+            <ul>
+                
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
