making href for the table of content

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                 </ul>  
         </div>
     </section>
-    <div class="tablecontent">
-        <div class="page1">The Negev and the Southern District</div>
-        <div class="page2">The north - from the Golan Heights to the Western Galilee</div>
-        <div class="page3">Central israel</div>
-    </div>
+        <div class="tablecontent">
+            <div class="southbox"><a href="page1south.html">The Negev and the Southern District</a></div>
+            <div class="centerbox"><a href="page3center.html">Central israel</a></div>
+            <div class="northbox"> <a href="page2north.html">The north - from the Golan Heights to the Western Galilee</a></div>
+        </div>
     <div class="contactbox">
         <h1>here are some contact details of mine</h1>
         <div class="contactlink">
