--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>omer'swikimainpage</title>
 </head>
 <nav class="navbar">
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+    <ul  class="navcons">
+        <li class="navcons"><a href="contactme.html">contact me</a></li>
+        <li class="navcons"><a href="gallery.html">gallery</a></li>
+        <li class="navcons"><a href="more info">more info</a></li>
     </ul>
 </nav>
 <body id="mainbody">
@@ -25,7 +25,7 @@
                 <ul>
                     <li>reccomended trails in each area</li>
                     <li>reccomended atractions</li>
-                    <li>info about the different areas</li>
+                    <li>info about the different areas(in the links of each site)</li>
                     <li>some tips of mine</li>
                 </ul>  
         </div>
@@ -34,12 +34,7 @@
             <div class="southbox"><a href="page1south.html">The Negev and the Southern District</a></div>
             <div class="centerbox"><a href="page3center.html">Central israel</a></div>
             <div class="northbox"> <a href="page2north.html">The north - from the Golan Heights to the Western Galilee</a></div>
-        </div>
-    <div class="contactbox">
-        <h1>here are some contact details of mine</h1>
-        <div class="contactlink">
-            <ul>
-                
+        </div>            
             </ul>
         </div>
     </div>
