--- a/page1south.html
+++ b/page1south.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>south</title>
 </head>
-<body>
+<nav class="navbar">
+    <ul  class="navcons">
+        <li class="navcons"><a href="contactme.html">contact me</a></li>
+        <li class="navcons"><a href="gallery.html">gallery</a></li>
+        <li class="navcons"><a href="more info">more info</a></li>
+    </ul>
+</nav>
+<body id="southpage">
+    <section class="wellcomesouth">
+      <div class="wellcomebox">
+                <h1>well come to the southen discrit of israel!</h1>
+                <h2>what sord of information are you looking for?</h2>
+            <ul class="infoseclinks">
+                <li class="infoseclinks"><a href="#trails" >reccomended trails in each area</a></li>
+                <li class="infoseclinks"><a href="#atractions" >reccomended atractions</a></li>
+                <li class="infoseclinks"><a href="#tips" >some tips of mine</a></li>
+            </ul>
+     </div>
+    </section>
+    <section class="section" id="trails">
+        <div class="sectiontitle"><h1>in the southern discrit we have many trails, you just need to find the one for you</h1></div>
+        <div class="secbox">
+            <div class="seclinks">
+                <label class="traillabel">THE RED CANYON <br>
+                 <a href="https://www.abrahamtours.com/tours/red-canyon-shuttle-from-eilat/" alt="" target="_blank"><img id="imgtrail" src="redcanyon.jpg"></a>
+                </label>
+                <label class="traillabel">MOUNT SINAI AND RED SEA <br>
+                  <a href="https://www.abrahamtours.com/tours/mount-sinai-and-red-sea-2-day-tour/" alt="" target="_blank"><img id="imgtrail" src="mountsinai.jpg"></a>
+                </label>
+                <label class="traillabel">EILAT MOUNTAINS JEEP TOUR <br>
+                  <a href="https://www.abrahamtours.com/tours/eilat-desert-jeep-tour/" alt="" target="_blank"><img  id="imgtrail" src="jeep.jpg"></a>
+                </label>
+                <label class="traillabel">deadsea hikes <br>
+                    <a href="https://www.israel21c.org/the-10-best-dead-sea-hikes/" alt="" target="_blank"><img  id="imgtrail" src="deadsea.jpg"></a>
+                </label>
+            </div>
+        </div>
+    </section>
+    <section class="section" id="atractions">
+        <div class="sectiontitle"><h1>here are some reccomneded atraction in some of the areas</h1></div>
+        <div class="secbox">
+            <div class="seclinks">
+                <label class="traillabel">dead sea atractions<br>
+                 <a href="https://www.planetware.com/tourist-attractions-/dead-sea-isr-st-ds.htm" alt="" target="_blank"><img id="imgtrail" src="mesada.jpg"></a>
+                </label>
+                <label class="traillabel">eilad and red sea atractions <br>
+                  <a href="https://www.planetware.com/tourist-attractions-/elat-isr-st-ei.htm" alt="" target="_blank"><img id="imgtrail" src="eilatatraction.jpg"></a>
+                 </label>
+                 <label class="traillabel">the arava <br>
+                  <a href="https://www.elal.com/magazine/en/portfolio-items/travel/southern-israel/five-family-attractions/" alt="" target="_blank"><img id="imgtrail" src="arava.jpg"></a>
+                 </label>
+                 <label class="traillabel">ein ovdat <br>
+                    <a href=https://www.parks.org.il/en/reserve-park/en-avdat-national-park-2/ alt="" target="_blank"><img id="imgtrail" src="ovdat.jpg"></a>
+                 </label>
+            </div>
+        </div>
+    </section>
+    <section class="section" id="tips">
+        <div><h1>here some tip of mine for this arean</h1></div>
+        <h1 style="left: 20px;"><i>"In the Negev, the people of Israel and its state will be examined"</i> by david ben gurion</h1>
+        <div class="tipbox"><h2>look around when your visiting the negev, learn about the history of the different areas and places some are relevante for our time and some to thousands of years ago! <br>
+            enjoy the visit!</h2></div>
+    </section>
+
     
 </body>
 </html>
