center of israel done 1

--- a/page1south.html
+++ b/page1south.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>south</title>
+    <title>southofisrael</title>
 </head>
 <nav class="navbar">
     <ul  class="navcons">
@@ -30,17 +30,17 @@
         <div class="secbox">
             <div class="seclinks">
                 <label class="traillabel">THE RED CANYON <br>
-                 <a href="https://www.abrahamtours.com/tours/red-canyon-shuttle-from-eilat/" alt="" target="_blank"><img id="imgtrail" src="redcanyon.jpg"></a>
-                </label>
-                <label class="traillabel">MOUNT SINAI AND RED SEA <br>
-                  <a href="https://www.abrahamtours.com/tours/mount-sinai-and-red-sea-2-day-tour/" alt="" target="_blank"><img id="imgtrail" src="mountsinai.jpg"></a>
-                </label>
-                <label class="traillabel">EILAT MOUNTAINS JEEP TOUR <br>
-                  <a href="https://www.abrahamtours.com/tours/eilat-desert-jeep-tour/" alt="" target="_blank"><img  id="imgtrail" src="jeep.jpg"></a>
-                </label>
-                <label class="traillabel">deadsea hikes <br>
-                    <a href="https://www.israel21c.org/the-10-best-dead-sea-hikes/" alt="" target="_blank"><img  id="imgtrail" src="deadsea.jpg"></a>
-                </label>
+                    <a href="https://www.abrahamtours.com/tours/red-canyon-shuttle-from-eilat/" alt="" target="_blank"><img id="imgtrail" src="redcanyon.jpg"></a>
+                   </label>
+                   <label class="traillabel">MOUNT SINAI AND RED SEA <br>
+                     <a href="https://www.abrahamtours.com/tours/mount-sinai-and-red-sea-2-day-tour/" alt="" target="_blank"><img id="imgtrail" src="mountsinai.jpg"></a>
+                   </label>
+                   <label class="traillabel">EILAT MOUNTAINS JEEP TOUR <br>
+                     <a href="https://www.abrahamtours.com/tours/eilat-desert-jeep-tour/" alt="" target="_blank"><img  id="imgtrail" src="jeep.jpg"></a>
+                   </label>
+                   <label class="traillabel">deadsea hikes <br>
+                       <a href="https://www.israel21c.org/the-10-best-dead-sea-hikes/" alt="" target="_blank"><img  id="imgtrail" src="deadsea.jpg"></a>
+                   </label>
             </div>
         </div>
     </section>
