--- a/page3center.html
+++ b/page3center.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>center</title>
+    <title>centerofisrael</title>
 </head>
-<body>
+<nav class="navbar">
+    <ul  class="navcons">
+        <li class="navcons"><a href="contactme.html">contact me</a></li>
+        <li class="navcons"><a href="gallery.html">gallery</a></li>
+        <li class="navcons"><a href="more info">more info</a></li>
+    </ul>
+</nav>
+<body id="centerpage">
+    <section class="wellcomesouth">
+      <div class="wellcomebox">
+                <h1>well come to the center of israel!</h1>
+                <h2>what sord of information are you looking for?</h2>
+            <ul class="infoseclinks">
+                <li class="infoseclinks"><a href="#trails" >reccomended trails in center</a></li>
+                <li class="infoseclinks"><a href="#atractions" >reccomended atractions</a></li>
+                <li class="infoseclinks"><a href="#tips" >some tips of mine</a></li>
+            </ul>
+     </div>
+    </section>
+    <section class="section" id="trails">
+        <div class="sectiontitle"><h1>in the center there are mainly cities, but if youll go hier to jerusalem or around you can find both cities and nature trails</h1></div>
+        <div class="secbox">
+            <div class="seclinks">
+                <label class="traillabel">jerusalem tours <br>
+                    <a href=https://www.tripadvisor.com/Attractions-g293983-Activities-c42-t224-Jerusalem_Jerusalem_District.html" alt="" target="_blank"><img id="imgtrail" src="jerusalem.jpg"></a>
+                    </label>
+                    <label class="traillabel">tel aviv tours <br>
+                     <a href=https://www.tripadvisor.com/Attractions-g293984-Activities-c42-Tel_Aviv_Tel_Aviv_District.html" alt="" target="_blank"><img id="imgtrail" src="telaviv.jpg"></a>
+                    </label>
+                    <label class="traillabel">jerusalem mountains <br>
+                     <a href="https://www.israel21c.org/10-top-hikes-in-the-jerusalem-area/" alt="" target="_blank"><img  id="imgtrail" src="jerusmount.jpg"></a>
+                    </label>
+                    <label class="traillabel">yarkon-national-park <br>
+                       <a href=https://www.parks.org.il/en/reserve-park/yarkon-national-park/" alt="" target="_blank"><img  id="imgtrail" src="yarkon.jpg"></a>
+                    </label>
+            </div>
+        </div>
+    </section>
+    <section class="section" id="atractions">
+        <div class="sectiontitle"><h1>here are some reccomneded atraction in some of the areas</h1></div>
+        <div class="secbox">
+            <div class="seclinks">
+                <label class="traillabel">tel aviv atractions<br>
+                 <a href="https://www.planetware.com/tourist-attractions-/tel-aviv-jaffa-yafo-isr-ta-t.htm" alt="" target="_blank"><img id="imgtrail" src="telavivatraction.jpg"></a>
+                </label>
+                <label class="traillabel" >jerusalem atractions <br>
+                  <a href="https://www.planetware.com/tourist-attractions-/jerusalem-isr-jr-j.htm" alt="" target="_blank"><img id="imgtrail" src="cotel.jpg"></a>
+                 </label>
+            </div>
+        </div>
+    </section>
+    <section class="section" id="tips">
+        <div><h1>here some tip of mine for this arean</h1></div>
+        <h1 style="left: 20px;"><i>"And eternity is Jerusalem"</i> by Tractate Brachot Nach A</h1>
+        <div class="tipbox"><h2>israel have been going through alot for thousands of years, search for history sites and you will not get disappointed <br>
+            enjoy the visit!</h2></div>
+    </section>
+
     
 </body>
 </html>
