north page done 1

--- a/page2north.html
+++ b/page2north.html
@@ -1,11 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>north</title>
+    <title>northofisrael</title>
 </head>
-<body>
+<nav class="navbar">
+    <ul  class="navcons">
+        <li class="navcons"><a href="contactme.html">contact me</a></li>
+        <li class="navcons"><a href="gallery.html">gallery</a></li>
+        <li class="navcons"><a href="more info">more info</a></li>
+    </ul>
+</nav>
+<body id="northpage">
+    <section class="wellcomesouth">
+      <div class="wellcomebox">
+                <h1>well come to the center of israel!</h1>
+                <h2>what sord of information are you looking for?</h2>
+            <ul class="infoseclinks">
+                <li class="infoseclinks"><a href="#trails" >reccomended trails in center</a></li>
+                <li class="infoseclinks"><a href="#atractions" >reccomended atractions</a></li>
+                <li class="infoseclinks"><a href="#tips" >some tips of mine</a></li>
+            </ul>
+     </div>
+    </section>
+    <section class="section" id="trails">
+        <div class="sectiontitle"><h1>in the center there are mainly cities, but if youll go hier to jerusalem or around you can find both cities and nature trails</h1></div>
+        <div class="secbox">
+            <div class="seclinks">
+                <label class="traillabel">golan-heights <br>
+                    <a href="https://www.alltrails.com/israel/golan-heights" alt="" target="_blank"><img id="imgtrail" src="golan.jpg"></a>
+                    </label>
+                    <label class="traillabel">western galilee hikes <br>
+                     <a href="https://www.westgalil.org.il/en/?gclid=CjwKCAiAl4WABhAJEiwATUnEF3SneR_hKuyEcFGP25sYBVYEXjnaDzGv01tqKcrqsL5Yi25mSQtGNxoCONUQAvD_BwE" alt="" target="_blank"><img id="imgtrail" src="westerngalilee.jpg"></a>
+                    </label>
+                    <label class="traillabel">galilee and the galilee sea <br>
+                     <a href="https://www.tripadvisor.com/Attractions-g293981-Activities-c61-t87-Galilee_Region_Northern_District.html" alt="" target="_blank"><img  id="imgtrail" src="galilee.jpg"></a>
+                    </label>
+                    <label class="traillabel">upper galilee <br>
+                       <a href=https://www.touristisrael.com/a-hike-in-the-upper-galilee-nachal-amud-near-safed/2286/" alt="" target="_blank"><img  id="imgtrail" src="amud.jpg"></a>
+                    </label>
+            </div>
+        </div>
+    </section>
+    <section class="section" id="atractions">
+        <div class="sectiontitle"><h1>here are some reccomneded atraction in some of the areas</h1></div>
+        <div class="secbox">
+            <div class="seclinks">
+                <label class="traillabel">sea of galilee region<br>
+                 <a href="https://www.planetware.com/river-jordan/sea-of-galilee-isr-nr-sg.htm" alt="" target="_blank"><img id="imgtrail" src="arbel.jpg"></a>
+                </label>
+                <label class="traillabel" >jerusalem atractions <br>
+                  <a href="https://www.touristisrael.com/western-galilee/445/" alt="" target="_blank"><img id="imgtrail" src="roshhanikra.jpg"></a>
+                </label>
+                <label class="traillabel" >at the winter you can find some snow<br>
+                    <a href="https://www.touristisrael.com/mount-hermon-ski-resort/2446/" alt="" target="_blank"><img id="imgtrail" src="hermon.jpg"></a>
+                </label>
+            </div>
+        </div>
+    </section>
+    <section class="section" id="tips">
+        <div><h1>here some tip of mine for this area</h1></div>
+        <h1 style="left: 20px;"><i>"didnt find something fits"</i> by me</h1>
+        <div class="tipbox"><h2>but, one of the many buties of israel is the veriety of nature, go and explore the green and some times also white of israel! <br>
+            enjoy the visit!</h2></div>
+    </section>
+
     
 </body>
 </html>
