--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <nav class="navbar">
     <ul  class="navcons">
-        <li class="navcons"><a href="contactme.html">contact me</a></li>
-        <li class="navcons"><a href="gallery.html">gallery</a></li>
-        <li class="navcons"><a href="more info">more info</a></li>
+        <li class="navcons"><a href="#contactme">contact me</a></li>
+        <li class="navcons"><a href="">gallery</a></li>
+        <li class="navcons"><a href="">more info</a></li>
     </ul>
 </nav>
 <body id="mainbody">
@@ -35,8 +35,14 @@
             <div class="centerbox"><a href="page3center.html">Central israel</a></div>
             <div class="northbox"> <a href="page2north.html">The north - from the Golan Heights to the Western Galilee</a></div>
         </div>            
-            </ul>
-        </div>
     </div>
+    <section id="contactme" class="contactme">
+        <div class="contacttitle"><h1>contact me</h1></div>
+        <div class="contactlink">
+            <a href="https://github.com/omerokach">github</a>
+            <a href="https://www.facebook.com/omer.rokach">facebook</a>
+            <a href="https://www.instagram.com/omer.rokach/">instagram</a>
+        </div>
+    </section>
 </body>
 </html>
