--- a/page1south.html
+++ b/page1south.html
@@ -49,17 +49,17 @@
         <div class="secbox">
             <div class="seclinks">
                 <label class="traillabel">dead sea atractions<br>
-                 <a href="https://www.planetware.com/tourist-attractions-/dead-sea-isr-st-ds.htm" alt="" target="_blank"><img id="imgtrail" src="mesada.jpg"></a>
-                </label>
+                 <div class="imgcontainer"><a href="https://www.planetware.com/tourist-attractions-/dead-sea-isr-st-ds.htm" alt="" target="_blank"><img id="imgtrail" src="mesada.jpg"></a>
+                </div></label>
                 <label class="traillabel">eilad and red sea atractions <br>
-                  <a href="https://www.planetware.com/tourist-attractions-/elat-isr-st-ei.htm" alt="" target="_blank"><img id="imgtrail" src="eilatatraction.jpg"></a>
-                 </label>
+                    <div class="imgcontainer"><a href="https://www.planetware.com/tourist-attractions-/elat-isr-st-ei.htm" alt="" target="_blank"><img id="imgtrail" src="eilatatraction.jpg"></a>
+                 </div></label>
                  <label class="traillabel">the arava <br>
-                  <a href="https://www.elal.com/magazine/en/portfolio-items/travel/southern-israel/five-family-attractions/" alt="" target="_blank"><img id="imgtrail" src="arava.jpg"></a>
-                 </label>
+                    <div class="imgcontainer"> <a href="https://www.elal.com/magazine/en/portfolio-items/travel/southern-israel/five-family-attractions/" alt="" target="_blank"><img id="imgtrail" src="arava.jpg"></a>
+                 </div></label>
                  <label class="traillabel">ein ovdat <br>
-                    <a href=https://www.parks.org.il/en/reserve-park/en-avdat-national-park-2/ alt="" target="_blank"><img id="imgtrail" src="ovdat.jpg"></a>
-                 </label>
+                    <div class="imgcontainer"> <a href=https://www.parks.org.il/en/reserve-park/en-avdat-national-park-2/ alt="" target="_blank"><img id="imgtrail" src="ovdat.jpg"></a>
+                 </div></label>
             </div>
         </div>
     </section>
@@ -69,7 +69,14 @@
         <div class="tipbox"><h2>look around when your visiting the negev, learn about the history of the different areas and places some are relevante for our time and some to thousands of years ago! <br>
             enjoy the visit!</h2></div>
     </section>
-
+    <section id="contactme" class="contactme">
+        <div class="contacttitle"><h1>contact me</h1></div>
+        <div class="contactlink">
+            <a href="https://github.com/omerokach">github</a>
+            <a href="https://www.facebook.com/omer.rokach">facebook</a>
+            <a href="https://www.instagram.com/omer.rokach/">instagram</a>
+        </div>
+    </section>
     
 </body>
 </html>
