--- a/page3center.html
+++ b/page3center.html
@@ -63,7 +63,14 @@
         <div class="tipbox"><h2>israel have been going through alot for thousands of years, search for history sites and you will not get disappointed <br>
             enjoy the visit!</h2></div>
     </section>
-
+    <section id="contactme" class="contactme">
+        <div class="contacttitle"><h1>contact me</h1></div>
+        <div class="contactlink">
+            <a href="https://github.com/omerokach">github</a>
+            <a href="https://www.facebook.com/omer.rokach">facebook</a>
+            <a href="https://www.instagram.com/omer.rokach/">instagram</a>
+        </div>
+    </section>
     
 </body>
 </html>
