--- a/page2north.html
+++ b/page2north.html
@@ -66,7 +66,14 @@
         <div class="tipbox"><h2>but, one of the many buties of israel is the veriety of nature, go and explore the green and some times also white of israel! <br>
             enjoy the visit!</h2></div>
     </section>
-
+    <section id="contactme" class="contactme">
+        <div class="contacttitle"><h1>contact me</h1></div>
+        <div class="contactlink">
+            <a href="https://github.com/omerokach">github</a>
+            <a href="https://www.facebook.com/omer.rokach">facebook</a>
+            <a href="https://www.instagram.com/omer.rokach/">instagram</a>
+        </div>
+    </section>
     
 </body>
 </html>
