adding some iframes for the idex

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1>short summery about the subjact i have chose to shere with you...</h1>
         </div>
         <div class="summerybox">
-            in this website ill try to give you some advices for hiking in israel!<br>
+           <div class="summerytext"> in this website ill try to give you some advices for hiking in israel!<br>
             ill try to conclude as many information that i can to give you the best experience
             of israel calture and nature.<br>
                 <ul>
@@ -27,7 +27,12 @@
                     <li>reccomended atractions</li>
                     <li>info about the different areas(in the links of each site)</li>
                     <li>some tips of mine</li>
-                </ul>  
+                </ul>
+            </div>  
+            <div class="summeryiframe">
+                <iframe width="400" height="180" src="https://www.youtube.com/embed/FmJiypHlRJY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="400" height="180" src="https://www.youtube.com/embed/ujWVDdGvUjQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
     </section>
         <div class="tablecontent">
