some order in the tips sec

--- a/page3center.html
+++ b/page3center.html
@@ -8,9 +8,9 @@
 </head>
 <nav class="navbar">
     <ul  class="navcons">
-        <li class="navcons"><a href="contactme.html">contact me</a></li>
-        <li class="navcons"><a href="gallery.html">gallery</a></li>
-        <li class="navcons"><a href="more info">more info</a></li>
+        <li class="navcons"><a href="#contactme">contact me</a></li>
+        <li class="navcons"><a href="">gallery</a></li>
+        <li class="navcons"><a href="">more info</a></li>
     </ul>
 </nav>
 <body id="centerpage">
@@ -58,8 +58,10 @@
         </div>
     </section>
     <section class="section" id="tips">
-        <div><h1>here some tip of mine for this arean</h1></div>
-        <h1 style="left: 20px;"><i>"And eternity is Jerusalem"</i> by Tractate Brachot Nach A</h1>
+        <div id="tipquotes">
+            <h1>here some tip of mine for this arean</h1>
+            <h1 style="left: 20px;"><i>"And eternity is Jerusalem"</i> by Tractate Brachot Nach A</h1>
+        </div>
         <div class="tipbox"><h2>israel have been going through alot for thousands of years, search for history sites and you will not get disappointed <br>
             enjoy the visit!</h2></div>
     </section>
