--- a/page1south.html
+++ b/page1south.html
@@ -8,9 +8,9 @@
 </head>
 <nav class="navbar">
     <ul  class="navcons">
-        <li class="navcons"><a href="contactme.html">contact me</a></li>
-        <li class="navcons"><a href="gallery.html">gallery</a></li>
-        <li class="navcons"><a href="more info">more info</a></li>
+        <li class="navcons"><a href="#contactme">contact me</a></li>
+        <li class="navcons"><a href="">gallery</a></li>
+        <li class="navcons"><a href="">more info</a></li>
     </ul>
 </nav>
 <body id="southpage">
@@ -64,8 +64,10 @@
         </div>
     </section>
     <section class="section" id="tips">
-        <div><h1>here some tip of mine for this arean</h1></div>
-        <h1 style="left: 20px;"><i>"In the Negev, the people of Israel and its state will be examined"</i> by david ben gurion</h1>
+        <div id="tipquotes">
+            <h1>here some tip of mine for this area</h1>
+            <h1 style="left: 20px;"><i>"In the Negev, the people of Israel and its state will be examined"</i> by david ben gurion</h1>
+        </div>
         <div class="tipbox"><h2>look around when your visiting the negev, learn about the history of the different areas and places some are relevante for our time and some to thousands of years ago! <br>
             enjoy the visit!</h2></div>
     </section>
