--- a/page2north.html
+++ b/page2north.html
@@ -8,9 +8,9 @@
 </head>
 <nav class="navbar">
     <ul  class="navcons">
-        <li class="navcons"><a href="contactme.html">contact me</a></li>
-        <li class="navcons"><a href="gallery.html">gallery</a></li>
-        <li class="navcons"><a href="more info">more info</a></li>
+        <li class="navcons"><a href="#contactme">contact me</a></li>
+        <li class="navcons"><a href="">gallery</a></li>
+        <li class="navcons"><a href="">more info</a></li>
     </ul>
 </nav>
 <body id="northpage">
@@ -61,10 +61,13 @@
         </div>
     </section>
     <section class="section" id="tips">
-        <div><h1>here some tip of mine for this area</h1></div>
+        <div id="tipquotes">
+        <h1>here some tip of mine for this area</h1>
         <h1 style="left: 20px;"><i>"didnt find something fits"</i> by me</h1>
+        </div>
         <div class="tipbox"><h2>but, one of the many buties of israel is the veriety of nature, go and explore the green and some times also white of israel! <br>
-            enjoy the visit!</h2></div>
+            enjoy the visit!</h2>
+        </div>
     </section>
     <section id="contactme" class="contactme">
         <div class="contacttitle"><h1>contact me</h1></div>
