orginazing all the jpgs in 1 file

--- a/page1south.html
+++ b/page1south.html
@@ -30,16 +30,16 @@
         <div class="secbox">
             <div class="seclinks">
                 <label class="traillabel">THE RED CANYON <br>
-                    <a href="https://www.abrahamtours.com/tours/red-canyon-shuttle-from-eilat/" alt="" target="_blank"><img id="imgtrail" src="redcanyon.jpg"></a>
+                    <a href="https://www.abrahamtours.com/tours/red-canyon-shuttle-from-eilat/" alt="" target="_blank"><img id="imgtrail" src="imgs/redcanyon.jpg"></a>
                    </label>
                    <label class="traillabel">MOUNT SINAI AND RED SEA <br>
-                     <a href="https://www.abrahamtours.com/tours/mount-sinai-and-red-sea-2-day-tour/" alt="" target="_blank"><img id="imgtrail" src="mountsinai.jpg"></a>
+                     <a href="https://www.abrahamtours.com/tours/mount-sinai-and-red-sea-2-day-tour/" alt="" target="_blank"><img id="imgtrail" src="imgs/mountsinai.jpg"></a>
                    </label>
                    <label class="traillabel">EILAT MOUNTAINS JEEP TOUR <br>
-                     <a href="https://www.abrahamtours.com/tours/eilat-desert-jeep-tour/" alt="" target="_blank"><img  id="imgtrail" src="jeep.jpg"></a>
+                     <a href="https://www.abrahamtours.com/tours/eilat-desert-jeep-tour/" alt="" target="_blank"><img  id="imgtrail" src="imgs/jeep.jpg"></a>
                    </label>
                    <label class="traillabel">deadsea hikes <br>
-                       <a href="https://www.israel21c.org/the-10-best-dead-sea-hikes/" alt="" target="_blank"><img  id="imgtrail" src="deadsea.jpg"></a>
+                       <a href="https://www.israel21c.org/the-10-best-dead-sea-hikes/" alt="" target="_blank"><img  id="imgtrail" src="imgs/deadsea.jpg"></a>
                    </label>
             </div>
         </div>
@@ -49,16 +49,16 @@
         <div class="secbox">
             <div class="seclinks">
                 <label class="traillabel">dead sea atractions<br>
-                 <div class="imgcontainer"><a href="https://www.planetware.com/tourist-attractions-/dead-sea-isr-st-ds.htm" alt="" target="_blank"><img id="imgtrail" src="mesada.jpg"></a>
+                 <div class="imgcontainer"><a href="https://www.planetware.com/tourist-attractions-/dead-sea-isr-st-ds.htm" alt="" target="_blank"><img id="imgtrail" src="imgs/mesada.jpg"></a>
                 </div></label>
                 <label class="traillabel">eilad and red sea atractions <br>
-                    <div class="imgcontainer"><a href="https://www.planetware.com/tourist-attractions-/elat-isr-st-ei.htm" alt="" target="_blank"><img id="imgtrail" src="eilatatraction.jpg"></a>
+                    <div class="imgcontainer"><a href="https://www.planetware.com/tourist-attractions-/elat-isr-st-ei.htm" alt="" target="_blank"><img id="imgtrail" src="imgs/eilatatraction.jpg"></a>
                  </div></label>
                  <label class="traillabel">the arava <br>
-                    <div class="imgcontainer"> <a href="https://www.elal.com/magazine/en/portfolio-items/travel/southern-israel/five-family-attractions/" alt="" target="_blank"><img id="imgtrail" src="arava.jpg"></a>
+                    <div class="imgcontainer"> <a href="https://www.elal.com/magazine/en/portfolio-items/travel/southern-israel/five-family-attractions/" alt="" target="_blank"><img id="imgtrail" src="imgs/arava.jpg"></a>
                  </div></label>
                  <label class="traillabel">ein ovdat <br>
-                    <div class="imgcontainer"> <a href=https://www.parks.org.il/en/reserve-park/en-avdat-national-park-2/ alt="" target="_blank"><img id="imgtrail" src="ovdat.jpg"></a>
+                    <div class="imgcontainer"> <a href=https://www.parks.org.il/en/reserve-park/en-avdat-national-park-2/ alt="" target="_blank"><img id="imgtrail" src="imgs/ovdat.jpg"></a>
                  </div></label>
             </div>
         </div>
