--- a/page2north.html
+++ b/page2north.html
@@ -30,16 +30,16 @@
         <div class="secbox">
             <div class="seclinks">
                 <label class="traillabel">golan-heights <br>
-                    <a href="https://www.alltrails.com/israel/golan-heights" alt="" target="_blank"><img id="imgtrail" src="golan.jpg"></a>
+                    <a href="https://www.alltrails.com/israel/golan-heights" alt="" target="_blank"><img id="imgtrail" src="imgs/golan.jpg"></a>
                     </label>
                     <label class="traillabel">western galilee hikes <br>
-                     <a href="https://www.westgalil.org.il/en/?gclid=CjwKCAiAl4WABhAJEiwATUnEF3SneR_hKuyEcFGP25sYBVYEXjnaDzGv01tqKcrqsL5Yi25mSQtGNxoCONUQAvD_BwE" alt="" target="_blank"><img id="imgtrail" src="westerngalilee.jpg"></a>
+                     <a href="https://www.westgalil.org.il/en/?gclid=CjwKCAiAl4WABhAJEiwATUnEF3SneR_hKuyEcFGP25sYBVYEXjnaDzGv01tqKcrqsL5Yi25mSQtGNxoCONUQAvD_BwE" alt="" target="_blank"><img id="imgtrail" src="imgs/westerngalilee.jpg"></a>
                     </label>
                     <label class="traillabel">galilee and the galilee sea <br>
-                     <a href="https://www.tripadvisor.com/Attractions-g293981-Activities-c61-t87-Galilee_Region_Northern_District.html" alt="" target="_blank"><img  id="imgtrail" src="galilee.jpg"></a>
+                     <a href="https://www.tripadvisor.com/Attractions-g293981-Activities-c61-t87-Galilee_Region_Northern_District.html" alt="" target="_blank"><img  id="imgtrail" src="imgs/galilee.jpg"></a>
                     </label>
                     <label class="traillabel">upper galilee <br>
-                       <a href=https://www.touristisrael.com/a-hike-in-the-upper-galilee-nachal-amud-near-safed/2286/" alt="" target="_blank"><img  id="imgtrail" src="amud.jpg"></a>
+                       <a href=https://www.touristisrael.com/a-hike-in-the-upper-galilee-nachal-amud-near-safed/2286/" alt="" target="_blank"><img  id="imgtrail" src="imgs/amud.jpg"></a>
                     </label>
             </div>
         </div>
@@ -49,13 +49,13 @@
         <div class="secbox">
             <div class="seclinks">
                 <label class="traillabel">sea of galilee region<br>
-                 <a href="https://www.planetware.com/river-jordan/sea-of-galilee-isr-nr-sg.htm" alt="" target="_blank"><img id="imgtrail" src="arbel.jpg"></a>
+                 <a href="https://www.planetware.com/river-jordan/sea-of-galilee-isr-nr-sg.htm" alt="" target="_blank"><img id="imgtrail" src="imgs/arbel.jpg"></a>
                 </label>
                 <label class="traillabel" >jerusalem atractions <br>
-                  <a href="https://www.touristisrael.com/western-galilee/445/" alt="" target="_blank"><img id="imgtrail" src="roshhanikra.jpg"></a>
+                  <a href="https://www.touristisrael.com/western-galilee/445/" alt="" target="_blank"><img id="imgtrail" src="imgs/roshhanikra.jpg"></a>
                 </label>
                 <label class="traillabel" >at the winter you can find some snow<br>
-                    <a href="https://www.touristisrael.com/mount-hermon-ski-resort/2446/" alt="" target="_blank"><img id="imgtrail" src="hermon.jpg"></a>
+                    <a href="https://www.touristisrael.com/mount-hermon-ski-resort/2446/" alt="" target="_blank"><img id="imgtrail" src="imgs/hermon.jpg"></a>
                 </label>
             </div>
         </div>
