--- a/page3center.html
+++ b/page3center.html
@@ -30,16 +30,16 @@
         <div class="secbox">
             <div class="seclinks">
                 <label class="traillabel">jerusalem tours <br>
-                    <a href=https://www.tripadvisor.com/Attractions-g293983-Activities-c42-t224-Jerusalem_Jerusalem_District.html" alt="" target="_blank"><img id="imgtrail" src="jerusalem.jpg"></a>
+                    <a href=https://www.tripadvisor.com/Attractions-g293983-Activities-c42-t224-Jerusalem_Jerusalem_District.html" alt="" target="_blank"><img id="imgtrail" src="imgs/jerusalem.jpg"></a>
                     </label>
                     <label class="traillabel">tel aviv tours <br>
-                     <a href=https://www.tripadvisor.com/Attractions-g293984-Activities-c42-Tel_Aviv_Tel_Aviv_District.html" alt="" target="_blank"><img id="imgtrail" src="telaviv.jpg"></a>
+                     <a href=https://www.tripadvisor.com/Attractions-g293984-Activities-c42-Tel_Aviv_Tel_Aviv_District.html" alt="" target="_blank"><img id="imgtrail" src="imgs/telaviv.jpg"></a>
                     </label>
                     <label class="traillabel">jerusalem mountains <br>
-                     <a href="https://www.israel21c.org/10-top-hikes-in-the-jerusalem-area/" alt="" target="_blank"><img  id="imgtrail" src="jerusmount.jpg"></a>
+                     <a href="https://www.israel21c.org/10-top-hikes-in-the-jerusalem-area/" alt="" target="_blank"><img  id="imgtrail" src="imgs/jerusmount.jpg"></a>
                     </label>
                     <label class="traillabel">yarkon-national-park <br>
-                       <a href=https://www.parks.org.il/en/reserve-park/yarkon-national-park/" alt="" target="_blank"><img  id="imgtrail" src="yarkon.jpg"></a>
+                       <a href=https://www.parks.org.il/en/reserve-park/yarkon-national-park/" alt="" target="_blank"><img  id="imgtrail" src="imgs/yarkon.jpg"></a>
                     </label>
             </div>
         </div>
@@ -49,10 +49,10 @@
         <div class="secbox">
             <div class="seclinks">
                 <label class="traillabel">tel aviv atractions<br>
-                 <a href="https://www.planetware.com/tourist-attractions-/tel-aviv-jaffa-yafo-isr-ta-t.htm" alt="" target="_blank"><img id="imgtrail" src="telavivatraction.jpg"></a>
+                 <a href="https://www.planetware.com/tourist-attractions-/tel-aviv-jaffa-yafo-isr-ta-t.htm" alt="" target="_blank"><img id="imgtrail" src="imgs/telavivatraction.jpg"></a>
                 </label>
                 <label class="traillabel" >jerusalem atractions <br>
-                  <a href="https://www.planetware.com/tourist-attractions-/jerusalem-isr-jr-j.htm" alt="" target="_blank"><img id="imgtrail" src="cotel.jpg"></a>
+                  <a href="https://www.planetware.com/tourist-attractions-/jerusalem-isr-jr-j.htm" alt="" target="_blank"><img id="imgtrail" src="imgs/cotel.jpg"></a>
                  </label>
             </div>
         </div>
